2007-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_open_location_match),
	(totem_action_open_location): Patch from Philip Withnall
	<bugzilla@tecnocode.co.uk> to also complete on substrings in
	the "Open URL" dialogue (Closes: #394860)

2007-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_open_location_set_from_clipboard),
	(totem_action_open_location): Patch from Harm Hilvers
	<harm@tweakers.net> to copy the URL obtained from the clipboard into
	the "Open URL" dialogue, and automatically prepend "http://" when
	necessary (Closes: #320521)

2007-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_str_middle_truncate),
	(totem_recent_manager_changed_callback), (totem_action_add_recent):
	* src/totem-menu.h:
	* src/totem.c: (totem_action_open_location): Patch from
	Philip Withnall <bugzilla@tecnocode.co.uk> to make sure remote streams
	launched on the command-line appear in the "Open URL" dialogue
	(Closes: #394096)

2007-01-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (canonicalize_filename),
	(totem_resolve_symlink), (cd_cache_get_dev_from_volumes),
	(cd_cache_get_dev_from_drives), (cd_cache_new):
	Don't use realpath(), to avoid crashes on NetBSD
	(Closes: #394505)

2007-01-09  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_msg_print_dbg):
	(bvw_handle_element_message):
	(bvw_bus_message_cb):
	(bvw_error_from_gst_error):
	(poll_for_state_change_full):
	Minor error handling refactoring: show pretty error details in debug
	log in both places where we process error messages (bus callback and
	poll_for_state_change); don't flood the terminal if we encounter
	unknown element messages; don't pass unused debug detail to
	bvw_error_from_gst_error.

2007-01-09  Tim-Philipp Müller  <tim at centricular dot net>

        * src/backend/bacon-video-widget-gst-0.10.c:
        (parse_stream_info):
        (bacon_video_widget_new):